# SmartDoorbell

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/agents/: incident_reviewer.py
backend/app/api/: devices.py  events.py  health.py  internal.py  locks.py  predictions.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/ml/: occupancy.py  risk.py
backend/app/models/: domain.py
backend/tests/: test_api.py  test_company_services.py  test_event_decision_engine.py  test_incident_reviewer.py  test_internal_platform.py  test_occupancy_model.py  test_risk_model.py  test_yolo_fallback.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.tsx
data/migrations/: 001_init.sql  002_internal_platform.sql
data/seeds/: events.json
deploy/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
deploy/k8s/: api-deployment.yaml  dashboard-deployment.yaml
deploy/observability/: prometheus.yml
deploy/systemd/: doorbell-api.service  doorbell-edge.service
deploy/terraform/: main.tf
docs/: api.md  architecture.md  deployment.md  hardware.md  internal_platform.md  role_tailoring.md  runbooks.md
edge/capture/: camera_source.py  rtsp_camera.py
edge/events/: decision_engine.py
edge/hardware/: gpio_button.py  pir_sensor.py
edge/inference/: yolo_model.py
edge/training/: self_correction_loop.py
models/: MODEL_CARD.md
scripts/: benchmark_inference.py  propose_retraining.py  run_local.py
(+26 files in other folders)
